fix: dropdown overflow issue on vivaldi

--- a/scss/mobilebar.scss
+++ b/scss/mobilebar.scss
@@ -41,6 +41,7 @@
 			border-radius: 0;
 			.list-container {
 				max-height: 60vh!important;
+				max-height: 60dvh!important;
 				overflow-y: auto!important;
 			}
 		}
@@ -54,6 +55,7 @@
 		}
 
 		max-height: 60vh!important;
+		max-height: 60dvh!important;
 		overflow: auto!important;
 	}
 
